5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4010/executions/1616_2927.log
== SUBMITION (2019-04-01 15:06:36) 
-- CODE:
(3.00 + 1.50)
-- EXECUTION TIME:
0.199858
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:

-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:

-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:06:42) 
-- CODE:
(3.00 + 1.50)
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:08:16) 
-- CODE:
print(3.00 + 1.50)
print(round())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round())
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:08:19) 
-- CODE:
print(3.00 + 1.50)
print(round())
-- EXECUTION TIME:
0.134204
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2927/main.py", line 2, in <module>
    print(round())
TypeError: Required argument 'number' (pos 1) not found

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:08:57) 
-- CODE:
print(3.00 + 1.50)
print(round(3.00 + 1.50))
-- OUTPUT:
4.5
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:09:00) 
-- CODE:
print(3.00 + 1.50)
print(round(3.00 + 1.50))
-- EXECUTION TIME:
0.12959
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
4.5
4
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
4.5
4
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
4.5
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:09:01) 
-- CODE:
print(3.00 + 1.50)
print(round(3.00 + 1.50))
-- OUTPUT:
4.5
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:09:03) 
-- CODE:
print(3.00 + 1.50)
print(round(3.00 + 1.50))
-- OUTPUT:
4.5
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:09:15) 
-- CODE:

print(round(3.00 + 1.50))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:09:17) 
-- CODE:

print(round(3.00 + 1.50))
-- EXECUTION TIME:
0.211447
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
4
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
4
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:10:04) 
-- CODE:
print(3.00 + 1.50)
print()round().
-- ERROR:
File "XXXX", line 2
    print()round().
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:10:06) 
-- CODE:
print(3.00 + 1.50)
print()round().
-- EXECUTION TIME:
0.283077
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 2
    print()round().
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:10:41) 
-- CODE:
print(3.00 + 1.50)
prin(3.00 + 1.50)round()
-- ERROR:
File "XXXX", line 2
    prin(3.00 + 1.50)round()
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:10:43) 
-- CODE:
print(3.00 + 1.50)
prin(3.00 + 1.50)round()
-- EXECUTION TIME:
0.183818
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 2
    prin(3.00 + 1.50)round()
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:10:43) 
-- CODE:
print(3.00 + 1.50)
prin(3.00 + 1.50)round()
-- ERROR:
File "XXXX", line 2
    prin(3.00 + 1.50)round()
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:10:51) 
-- CODE:
print(3.00 + 1.50)
prin(3.00 + 1.50)round().
-- ERROR:
File "XXXX", line 2
    prin(3.00 + 1.50)round().
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:10:53) 
-- CODE:
print(3.00 + 1.50)
prin(3.00 + 1.50)round().
-- EXECUTION TIME:
0.200987
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 2
    prin(3.00 + 1.50)round().
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:22) 
-- CODE:
print(3.00 + 1.50)
prin(round(3.00 + 1.50))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    prin(round(3.00 + 1.50))
NameError: name 'prin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:11:25) 
-- CODE:
print(3.00 + 1.50)
prin(round(3.00 + 1.50))
-- EXECUTION TIME:
0.196709
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2927/main.py", line 2, in <module>
    prin(round(3.00 + 1.50))
NameError: name 'prin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:30) 
-- CODE:
print(3.00 + 1.50)
print(round(3.00 + 1.50))
-- OUTPUT:
4.5
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:11:32) 
-- CODE:
print(3.00 + 1.50)
print(round(3.00 + 1.50))
-- EXECUTION TIME:
0.124372
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
4.5
4
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
4.5
4
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
4.5
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:14:23) 
-- CODE:
3.00
1.50
print(round(3.00 + 1.50))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:14:27) 
-- CODE:
3.00
1.50
print(round(3.00 + 1.50))
-- EXECUTION TIME:
0.206068
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
4
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
4
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:14:54) 
-- CODE:
3.00
1.50
round(3.00 + 1.50)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:14:59) 
-- CODE:
3.00
1.50
round(3.00 + 1.50)
-- EXECUTION TIME:
0.206511
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:

-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:

-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:15:25) 
-- CODE:
print(3.00)
print(1.50)
round(3.00 + 1.50)
-- OUTPUT:
3.0
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:15:29) 
-- CODE:
print(3.00)
print(1.50)
round(3.00 + 1.50)
-- EXECUTION TIME:
0.160179
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
3.0
1.5
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
3.0
1.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
3.0
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:15:32) 
-- CODE:
print(3.00)
print(1.50)
round(3.00 + 1.50)
-- OUTPUT:
3.0
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:15:48) 
-- CODE:
print(3.00)
print(1.50)
print(round(3.00 + 1.50))
-- OUTPUT:
3.0
1.5
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:15:52) 
-- CODE:
print(3.00)
print(1.50)
print(round(3.00 + 1.50))
-- EXECUTION TIME:
0.164083
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
3.0
1.5
4
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
3.0
1.5
4
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
3.0
1.5
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:16:22) 
-- CODE:
print(3.00)
print(1.50)
print()
-- OUTPUT:
3.0
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:16:23) 
-- CODE:
print(3.00)
print(1.50)
print()
-- EXECUTION TIME:
0.183133
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
3.0
1.5
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
3.0
1.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
3.0
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:16:31) 
-- CODE:
print(3.00)
print(1.50)
print(round())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round())
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:16:44) 
-- CODE:
print(3.00)
print(1.50)
print()round()
-- ERROR:
File "XXXX", line 3
    print()round()
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:16:46) 
-- CODE:
print(3.00)
print(1.50)
print()round()
-- EXECUTION TIME:
0.181813
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 3
    print()round()
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:17:38) 
-- CODE:
round(3.00 + 1.50)
-- ERROR:
File "XXXX", line 3
    print()round()
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:17:39) 
-- CODE:
round(3.00 + 1.50)
-- EXECUTION TIME:
0.134478
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:

-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:

-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:20:13) 
-- CODE:
print(3 + 1.50 + 1.50)
print(round(6))
-- OUTPUT:
6.0
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:20:15) 
-- CODE:
print(3 + 1.50 + 1.50)
print(round(6))
-- EXECUTION TIME:
0.215054
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
6
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
6.0
6
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
6.0
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:20:17) 
-- CODE:
print(3 + 1.50 + 1.50)
print(round(6))
-- OUTPUT:
6.0
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:20:21) 
-- CODE:
print(3 + 1.50 + 1.50)
print(round())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round())
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:20:45) 
-- CODE:
print(3 + 1.50 + 1.50)
print(round(3 + 1.50 + 1.50))
-- OUTPUT:
6.0
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:20:47) 
-- CODE:
print(3 + 1.50 + 1.50)
print(round(3 + 1.50 + 1.50))
-- EXECUTION TIME:
0.194029
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
6
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
6.0
6
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
6.0
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:20:47) 
-- CODE:
print(3 + 1.50 + 1.50)
print(round(3 + 1.50 + 1.50))
-- OUTPUT:
6.0
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:20) 
-- CODE:
print(3 + 1.50 + 1.50)
print(3 + 1.50 + 1.50)round().
-- ERROR:
File "XXXX", line 2
    print(3 + 1.50 + 1.50)round().
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:21:22) 
-- CODE:
print(3 + 1.50 + 1.50)
print(3 + 1.50 + 1.50)round().
-- EXECUTION TIME:
0.156068
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 2
    print(3 + 1.50 + 1.50)round().
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:25) 
-- CODE:
print(3 + 1.50 + 1.50)
print(3 + 1.50 + 1.50)round()
-- ERROR:
File "XXXX", line 2
    print(3 + 1.50 + 1.50)round()
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:29) 
-- CODE:
print(3 + 1.50 + 1.50)
print(3 + 1.50 + 1.50) round()
-- ERROR:
File "XXXX", line 2
    print(3 + 1.50 + 1.50) round()
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:22:53) 
-- CODE:
print(3 + 1.50 + 1.50)
print(3 + 1.50 + 1.50)
round()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    round()
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:22:53) 
-- CODE:
print(3 + 1.50 + 1.50)
print(3 + 1.50 + 1.50)
round()
-- EXECUTION TIME:
0.103213
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2927/main.py", line 3, in <module>
    round()
TypeError: Required argument 'number' (pos 1) not found

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:22:53) 
-- CODE:
print(3 + 1.50 + 1.50)
print(3 + 1.50 + 1.50)
round()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    round()
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:23:12) 
-- CODE:
print(3 + 1.50 + 1.50)
round(6)
-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:23:13) 
-- CODE:
print(3 + 1.50 + 1.50)
round(6)
-- EXECUTION TIME:
0.160006
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
6.0
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:23:44) 
-- CODE:
print(3 + 1.50 + 1.50)

-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:24:31) 
-- CODE:
print(3 + 1.50 + 1.50)
print(round(3 + 3))
-- OUTPUT:
6.0
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:24:33) 
-- CODE:
print(3 + 1.50 + 1.50)
print(round(3 + 3))
-- EXECUTION TIME:
0.172425
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
6
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
6.0
6
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
6.0
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:24:34) 
-- CODE:
print(3 + 1.50 + 1.50)
print(round(3 + 3))
-- OUTPUT:
6.0
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:25:29) 
-- CODE:

print(round(3 + 3))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:25:30) 
-- CODE:

print(round(3 + 3))
-- EXECUTION TIME:
0.162102
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
6
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:26:18) 
-- CODE:
3 + 1.50 + 1.50
round(3 + 1.50 + 1.50).
-- ERROR:
File "XXXX", line 2
    round(3 + 1.50 + 1.50).
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:26:19) 
-- CODE:
3 + 1.50 + 1.50
round(3 + 1.50 + 1.50).
-- EXECUTION TIME:
0.1448
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 2
    round(3 + 1.50 + 1.50).
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:26:20) 
-- CODE:
3 + 1.50 + 1.50
round(3 + 1.50 + 1.50).
-- ERROR:
File "XXXX", line 2
    round(3 + 1.50 + 1.50).
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:26:26) 
-- CODE:

round(3 + 1.50 + 1.50).
-- ERROR:
File "XXXX", line 2
    round(3 + 1.50 + 1.50).
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:26:28) 
-- CODE:

round(3 + 1.50 + 1.50).
-- EXECUTION TIME:
0.210793
-- ERROR:
  File "/home/codebench/codes/1616/2927/main.py", line 2
    round(3 + 1.50 + 1.50).
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:26:48) 
-- CODE:
round(1.50+1.50+3)
-- ERROR:
File "XXXX", line 2
    round(3 + 1.50 + 1.50).
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:26:50) 
-- CODE:
round(1.50+1.50+3)
-- EXECUTION TIME:
0.209709
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:

-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:

-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:29:06) 
-- CODE:
3.00
2
round()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    round()
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:29:08) 
-- CODE:
3.00
2
round()
-- EXECUTION TIME:
0.143267
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2927/main.py", line 3, in <module>
    round()
TypeError: Required argument 'number' (pos 1) not found

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:29:35) 
-- CODE:
3.00
2
round(3.00 * 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    round()
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:29:36) 
-- CODE:
3.00
2
round(3.00 * 2)
-- EXECUTION TIME:
0.162751
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:

-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:

-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:30:32) 
-- CODE:
3.50
2

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    round()
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:30:43) 
-- CODE:
3.50
2
round()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    round()
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:09) 
-- CODE:
print(3.50)
print(2)
round()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    round()
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
